[tool.poetry]
name = "extyar"
version = "0.1.0"
description = ""
authors = ["Yaghoub Ghaderi <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
root = "valpy"
venvPath = "."
venv = ".venv"
